final fix for overflowing iframe on iphone

--- a/webroot/css/redesign.css
+++ b/webroot/css/redesign.css
@@ -66,7 +66,6 @@
 #demo-iframe #outer .image {
   position: relative;
   width: 33vmin;
-  min-width: 92%;
   height: 62vmin;
   top: 7vmin;
 }
@@ -121,7 +120,6 @@
 #demo-iframe #mobile-outer .image {
   position: relative;
   width: 74vmin;
-  min-width: 92%;
   height: 135vmin;
   top: 14vmin;
   left: 3vmin;
@@ -177,5 +175,5 @@
 .gl-button-link-black{
   line-height: 17px;
   padding: 1rem !important;
-  font-size: 24px;
+  font-size: 2.5vmin;
 }
